--- a/package.json
+++ b/package.json
@@ -12,9 +12,6 @@
     "@types/react-dom": "^16.9.0",
     "antd": "^4.0.2",
     "axios": "^0.19.2",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "http-proxy-middleware": "^1.0.2",
     "moment": "^2.24.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
@@ -27,8 +24,7 @@
     "uuid": "^7.0.2"
   },
   "scripts": {
-    "init-server": "node ./backend/server.js",
-    "start": "npm run init-server & PORT=3001 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
