--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "devDependencies": {
     "@types/react-redux": "^7.1.7",
     "@types/uuid": "^7.0.2",
+    "cypress": "^5.3.0",
     "redux-devtools": "^3.5.0"
   }
 }
