--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
-    "typescript": "~3.7.2",
+    "typescript": "^4.1.5",
     "uuid": "^7.0.2"
   },
   "scripts": {
