--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
-    "antd": "^4.0.2",
+    "antd": "^4.6.3",
     "axios": "^0.19.2",
     "moment": "^2.24.0",
     "react": "^16.13.0",
@@ -21,7 +21,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
-    "typescript": "^4.1.5",
+    "typescript": "~3.8.2",
     "uuid": "^7.0.2"
   },
   "scripts": {
