--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
-REACT_APP_ARCHILOGIC_PUBLISHABLE_API_KEY=
+REACT_APP_BACKEND_URL=
 REACT_APP_ARCHILOGIC_API_URL=https://api.archilogic.com
+REACT_APP_PUBLISHABLE_TOKEN=
