--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0",
-    "typescript": "~3.8.2",
+    "redux-thunk": "^2.3.0",  
+    "typescript": "^4.6.4",
     "uuid": "^7.0.2"
   },
   "scripts": {
