feat: Desk booking + Vercel deployment

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
-REACT_APP_BACKEND_URL=
-REACT_APP_ARCHILOGIC_API_URL=https://api.archilogic.com
+ARCHILOGIC_API_URL=https://api.archilogic.com
+ARCHILOGIC_SECRET_KEY=
+
+REACT_APP_ARCHILOGIC_API_URL=$ARCHILOGIC_API_URL
 REACT_APP_PUBLISHABLE_TOKEN=
