--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "antd": "^4.6.3",
-    "axios": "^0.21.1",
+    "axios": "^0.21.2",
     "moment": "^2.24.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
@@ -21,10 +21,16 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
-    "typescript": "~3.8.2",
-    "uuid": "^7.0.2"
+    "typescript": "^4.6.4",
+    "uuid": "^7.0.2",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "http-proxy-middleware": "^1.0.3",
+    "node-fetch": "^2.6.7"
   },
   "scripts": {
+    "vercel": "npx vercel dev",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
